# STA

./: .env.example  compose.app.yml  compose.infra.yml  docker-compose.yml
dashboard/: .dockerignore  next.config.ts  package-lock.json  package.json
dashboard/api/: auth.api.ts  base.api.ts  devices.api.ts  index.ts  orgs.api.ts
dashboard/app/: layout.tsx  not-found.tsx  page.tsx
dashboard/context/: AuthContext.tsx
dashboard/hooks/: useForm.ts  useRemember.tsx
dashboard/types/: auth.types.ts  devices.types.ts  orgs.types.ts  sensor_reading.ts
mosquitto/data/: mosquitto.db
server/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
server/api/: routers.py
server/api/endpoints/: __init__.py  auth.py  base.py  devices.py  healthy.py  orgs.py  sensor_reading.py  sensor_types.py  user.py  users.py  websockets.py
server/config/: __init__.py  config.py  database.py  setup_timescale.sql  sso.py  ws.py
server/crud/: auth.py  base.py  devices.py  orgs.py  sensor_reading.py  sensor_types.py  user.py
server/docs/: database_uml.md
server/enums/: device_status.py  user_roles.py
server/exceptions/: base.py
server/lib/: userSession.py
server/models/: Device.py  Org.py  SensorReading.py  SensorType.py  User.py  __init__.py  base.py
server/schemas/: auth.py  device.py  orgs.py  sensor_reading.py  sensor_types.py  user.py
server/scripts/: seed.py
server/tests/: conftest.py  test_auth.py  test_devices.py  test_health.py  test_orgs.py  test_sensor_readings.py  test_sensor_types.py  test_users.py
server/utils/: auth.py  devices.py
(+21 files in other folders)
