[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.136.3",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "fastapi-mail>=1.6.4",
    "redis[hiredis]>=8.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "fakeredis>=2.36.1",
    "httpx2>=2.3.0",
    "qrcode[pil]>=8.2",
    "fastapi-sso>=0.21.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
